src/objects/CustomObject14__c.object
<CustomObject>
    <fields>
        <fullName>FE1_1__c</fullName>
        <label>附加技能要求1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>工作积极主动</fullName>
                    <default>true</default>
                    <label>工作积极主动</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FE1_2__c</fullName>
        <label>附加技能要求2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>较好的团队合作精神</fullName>
                    <default>true</default>
                    <label>较好的团队合作精神</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FE1_3__c</fullName>
        <label>附加技能要求3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>主动汇报、沟通、协调，获得内外部客户的满意</fullName>
                    <default>true</default>
                    <label>主动汇报、沟通、协调，获得内外部客户的满意</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>区域</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field14__c</fullName>
        <formula>engineer__r.Manager.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>上级经理</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field15__c</fullName>
        <label>出生日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JE1_1__c</fullName>
        <label>必要技能要求1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>具有基本的光学、电路知识</fullName>
                    <default>true</default>
                    <label>具有基本的光学、电路知识</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JE1_2__c</fullName>
        <label>必要技能要求2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>能够进行一种设备的基本安装、简单维护</fullName>
                    <default>true</default>
                    <label>能够进行一种设备的基本安装、简单维护</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JE1_3__c</fullName>
        <label>必要技能要求3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>能够完成日常维修任务的90%以上，可在指导下解决比较复杂的技术问题</fullName>
                    <default>true</default>
                    <label>能够完成日常维修任务的90%以上，可在指导下解决比较复杂的技术问题</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE1_1__c</fullName>
        <label>通用技能1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>执行力</fullName>
                    <default>true</default>
                    <label>执行力</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE1_2__c</fullName>
        <label>通用技能2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>主动性</fullName>
                    <default>true</default>
                    <label>主动性</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE1_3__c</fullName>
        <label>通用技能3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>学习能力</fullName>
                    <default>true</default>
                    <label>学习能力</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZE1_1__c</fullName>
        <label>必要指标1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>从事相关技术工作工龄两年以上</fullName>
                    <default>true</default>
                    <label>从事相关技术工作工龄两年以上</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZE1_2__c</fullName>
        <label>必要指标2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>产品知识及技能考试80分以上</fullName>
                    <default>true</default>
                    <label>产品知识及技能考试80分以上</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZE1_3__c</fullName>
        <label>必要指标3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>具有良好的工作表现</fullName>
                    <default>true</default>
                    <label>具有良好的工作表现</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>db_1__c</fullName>
        <formula>IF(text(Field6__c) = &quot;达标&quot;, 1, 0) + IF(text(Field7__c) = &quot;达标&quot;, 1, 0) + IF(text(Field8__c) = &quot;达标&quot;, 1, 0) + IF(text(Field34__c) = &quot;达标&quot;, 1, 0) + IF(text(Field35__c) = &quot;达标&quot;, 1, 0) + IF(text(Field36__c) = &quot;达标&quot;, 1, 0) + IF(text(Field37__c) = &quot;达标&quot;, 1, 0) + IF(text(Field38__c) = &quot;达标&quot;, 1, 0) + IF(text(Field54__c) = &quot;达标&quot;, 1, 0) + IF(text(Field55__c) = &quot;达标&quot;, 1, 0) + IF(text(Field56__c) = &quot;达标&quot;, 1, 0) + IF(text(Field58__c) = &quot;达标&quot;, 1, 0) + IF(text(Field59__c) = &quot;达标&quot;, 1, 0) + IF(text(Field82__c) = &quot;达标&quot;, 1, 0) + IF(text(Field81__c) = &quot;达标&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>达标</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_2__c</fullName>
        <formula>Field47__c + Field46__c + Field45__c +  Field44__c +  Field42__c +  Field41__c +  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>工程师自评分总分</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>l_1__c</fullName>
        <formula>IF(text(Field6__c) = &quot;良&quot;, 1, 0) + IF(text(Field7__c) = &quot;良&quot;, 1, 0) + IF(text(Field8__c) = &quot;良&quot;, 1, 0) + IF(text(Field34__c) = &quot;良&quot;, 1, 0) + IF(text(Field35__c) = &quot;良&quot;, 1, 0) + IF(text(Field36__c) = &quot;良&quot;, 1, 0) + IF(text(Field37__c) = &quot;良&quot;, 1, 0) + IF(text(Field38__c) = &quot;良&quot;, 1, 0) + IF(text(Field54__c) = &quot;良&quot;, 1, 0) + IF(text(Field55__c) = &quot;良&quot;, 1, 0) + IF(text(Field56__c) = &quot;良&quot;, 1, 0) + IF(text(Field58__c) = &quot;良&quot;, 1, 0) + IF(text(Field59__c) = &quot;良&quot;, 1, 0) + IF(text(Field82__c) = &quot;良&quot;, 1, 0) + IF(text(Field81__c) = &quot;良&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>良</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>l_2__c</fullName>
        <formula>Field69__c + Field64__c + Field63__c +  Field62__c +  Field61__c +  Field60__c +  Field57__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>评委会评分总分</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wdb_1__c</fullName>
        <formula>IF(text(Field6__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field7__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field8__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field34__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field35__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field36__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field37__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field38__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field54__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field55__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field56__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field58__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field59__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field82__c) = &quot;未达标&quot;, 1, 0) + IF(text(Field81__c) = &quot;未达标&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>未达标</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>y_1__c</fullName>
        <formula>IF(text(Field6__c) = &quot;优&quot;, 1, 0) + IF(text(Field7__c) = &quot;优&quot;, 1, 0) + IF(text(Field8__c) = &quot;优&quot;, 1, 0) + IF(text(Field34__c) = &quot;优&quot;, 1, 0) + IF(text(Field35__c) = &quot;优&quot;, 1, 0) + IF(text(Field36__c) = &quot;优&quot;, 1, 0) + IF(text(Field37__c) = &quot;优&quot;, 1, 0) + IF(text(Field38__c) = &quot;优&quot;, 1, 0) + IF(text(Field54__c) = &quot;优&quot;, 1, 0) + IF(text(Field55__c) = &quot;优&quot;, 1, 0) + IF(text(Field56__c) = &quot;优&quot;, 1, 0) + IF(text(Field58__c) = &quot;优&quot;, 1, 0) + IF(text(Field59__c) = &quot;优&quot;, 1, 0) + IF(text(Field81__c) = &quot;优&quot;, 1, 0) + IF(text(Field82__c) = &quot;优&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>优</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>y_2__c</fullName>
        <formula>Field68__c + Field67__c + Field66__c +  Field65__c +  Field53__c +  Field52__c +  Field51__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>上级领导评分总分</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zhiji__c</fullName>
        <label>工程师职级历史</label>
        <referenceTo>promotion__c</referenceTo>
        <relationshipLabel>工程师职级评分表</relationshipLabel>
        <relationshipName>cDXF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>工程师职级评分表</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field13__c</columns>
        <columns>engineer__c</columns>
        <columns>Field83__c</columns>
        <columns>Field84__c</columns>
        <columns>Field18__c</columns>
        <columns>Field86__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>R{YYYY}{0000}</displayFormat>
        <label>工程师职级评分表</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师职级评分表</pluralLabel>
    <recordTypes>
        <fullName>E1</fullName>
        <active>true</active>
        <description>设备维护工程师</description>
        <label>E1</label>
    </recordTypes>
    <recordTypes>
        <fullName>E2</fullName>
        <active>true</active>
        <description>高级设备维护工程师</description>
        <label>E2</label>
    </recordTypes>
    <recordTypes>
        <fullName>E3</fullName>
        <active>true</active>
        <description>技术支持工程师</description>
        <label>E3</label>
    </recordTypes>
    <recordTypes>
        <fullName>E4</fullName>
        <active>true</active>
        <description>高级技术支持工程师</description>
        <label>E4</label>
    </recordTypes>
    <recordTypes>
        <fullName>E5</fullName>
        <active>true</active>
        <description>技术专家</description>
        <label>E5</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>